[gd_scene load_steps=14 format=2]

[ext_resource path="res://UI/game_theme.tres" type="Theme" id=1]
[ext_resource path="res://UI/ClickableButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://UI/upgrade-btn.png" type="Texture" id=3]
[ext_resource path="res://UI/close-button.png" type="Texture" id=4]
[ext_resource path="res://UI/equipment.png" type="Texture" id=5]
[ext_resource path="res://UI/Lab.gd" type="Script" id=6]
[ext_resource path="res://UI/UpgradePanel.tscn" type="PackedScene" id=7]

[sub_resource type="Animation" id=1]
resource_name = "Disabled"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("PurchaseButton:material:shader_param/grayscale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PurchaseButton/Price:custom_colors/font_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.678431, 0.678431, 0.678431, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "Enabled"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("PurchaseButton/Price:custom_colors/font_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.866667, 0.945098, 0.847059, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PurchaseButton:material:shader_param/grayscale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=3]
resource_name = "Disabled"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("PurchaseButton:material:shader_param/grayscale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PurchaseButton/Price:custom_colors/font_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.678431, 0.678431, 0.678431, 1 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "Enabled"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("PurchaseButton/Price:custom_colors/font_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.866667, 0.945098, 0.847059, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PurchaseButton:material:shader_param/grayscale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=5]
resource_name = "Disabled"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("PurchaseButton:material:shader_param/grayscale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PurchaseButton/Price:custom_colors/font_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.678431, 0.678431, 0.678431, 1 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "Enabled"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("PurchaseButton/Price:custom_colors/font_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.866667, 0.945098, 0.847059, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PurchaseButton:material:shader_param/grayscale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[node name="Lab" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -8.0
script = ExtResource( 6 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
margin_right = 64.0
margin_bottom = 56.0
theme = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="UpgradeSprite" type="Sprite" parent="Panel"]
position = Vector2( 6, 6 )
texture = ExtResource( 3 )

[node name="Label" type="Label" parent="Panel"]
margin_left = 5.0
margin_top = -3.0
margin_right = 47.0
margin_bottom = 11.0
custom_colors/font_color = Color( 0.027451, 0.227451, 0.313726, 1 )
text = "UPGRADES"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Close" parent="." instance=ExtResource( 2 )]
margin_left = 54.0
margin_top = 2.0
margin_right = 61.0
margin_bottom = 9.0
texture = ExtResource( 4 )

[node name="ExtractorUpgrade" parent="." instance=ExtResource( 7 )]
margin_left = 2.0
margin_top = 11.0
margin_right = 66.0
margin_bottom = 21.0

[node name="Icon" parent="ExtractorUpgrade" index="1"]
texture = ExtResource( 5 )
hframes = 12
frame = 3

[node name="AnimationPlayer" parent="ExtractorUpgrade" index="2"]
anims/Disabled = SubResource( 1 )
anims/Enabled = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="ExtractorUpgrade"]
position = Vector2( 21, 5 )
texture = ExtResource( 5 )
hframes = 12
frame = 2

[node name="Sprite2" type="Sprite" parent="ExtractorUpgrade"]
position = Vector2( 13, 5 )
texture = ExtResource( 5 )
hframes = 12
frame = 1

[node name="Sprite3" type="Sprite" parent="ExtractorUpgrade"]
position = Vector2( 5, 5 )
texture = ExtResource( 5 )
hframes = 12

[node name="ProcessorUpgrade" parent="." instance=ExtResource( 7 )]
margin_left = 2.0
margin_top = 22.0
margin_right = 66.0
margin_bottom = 32.0
upgrade_type = 1

[node name="Icon" parent="ProcessorUpgrade" index="1"]
texture = ExtResource( 5 )
hframes = 12
frame = 8

[node name="AnimationPlayer" parent="ProcessorUpgrade" index="2"]
anims/Disabled = SubResource( 3 )
anims/Enabled = SubResource( 4 )

[node name="Sprite" type="Sprite" parent="ProcessorUpgrade"]
position = Vector2( 19, 5 )
texture = ExtResource( 5 )
hframes = 12
frame = 7

[node name="AssemblyUpgrade" parent="." instance=ExtResource( 7 )]
margin_left = 2.0
margin_top = 33.0
margin_right = 66.0
margin_bottom = 43.0
upgrade_type = 2

[node name="Icon" parent="AssemblyUpgrade" index="1"]
texture = ExtResource( 5 )
hframes = 12
frame = 10

[node name="AnimationPlayer" parent="AssemblyUpgrade" index="2"]
anims/Disabled = SubResource( 5 )
anims/Enabled = SubResource( 6 )

[node name="Sprite" type="Sprite" parent="AssemblyUpgrade"]
position = Vector2( 19, 5 )
texture = ExtResource( 5 )
hframes = 12
frame = 9

[node name="FactoryUpgrade" parent="." instance=ExtResource( 7 )]
margin_left = 2.0
margin_top = 44.0
margin_right = 66.0
margin_bottom = 54.0
upgrade_type = 3

[editable path="ExtractorUpgrade"]

[editable path="ProcessorUpgrade"]

[editable path="AssemblyUpgrade"]
